# -

./: .env.example  .gitignore  Dockerfile  README.md  debug_pdf.py  dog_name_search.liquid  index.html  packing_slip.liquid  pyproject.toml  railway.toml  requirements.txt  run_update.command  slip_yamane.html  update.py  update_hospital.py  update_shipping.py
.claude/hooks/: session-start.sh
content/products/: ai-agent-starter-pack.json  claude-prompt-pack-vol1.json  claude-system-prompt-guide.json  n8n-claude-workflow-templates.json
content/products/ai-native/: axiom-zero.json  latent-map-alpha.json  (+1 more)
packing_slips/: slip_asakura.html  slip_hatsuzaki.html  slip_hisamura.html  slip_kobayashi.html  slip_masutani.html  slip_morita.html  slip_nakajima.html  slip_sagawa.html  slip_sugimoto.html  slip_takahashi.html  slip_tazawa.html
scripts/: seed_ai_native_products.py  seed_products.py
src/: config.py  database.py  main.py
src/accounting/: models.py  router.py
src/agent/: content.py  models.py  router.py
src/compliance/: models.py  router.py
src/crm/: email.py  models.py  router.py  schemas.py
src/growth/: models.py  router.py
src/marketplace/: models.py  router.py  schemas.py
src/products/: models.py  router.py  schemas.py
src/sales/: models.py  router.py  schemas.py
src/social/: twitter.py
static/: checkout.html  index.html  privacy.html  refund.html  tokushoho.html
static/brand/: preview.html
tests/: conftest.py  test_agent.py  test_compliance.py  test_crm.py  test_growth.py  test_marketplace.py  test_products.py  test_refund_protection.py
